<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_folder"
            android:title="@string/navigation_option_notas" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_option_categorias" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_file_download_24dp"
            android:title="@string/navigation_option_descargas" />
    </group>

    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_option_compartir" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/navigation_option_settings" />
        </menu>
    </item>

</menu>
